--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic');
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
-@import '~overlayscrollbars/css/OverlayScrollbars.min.css';
-@import '~icheck-bootstrap/icheck-bootstrap.min.css';
-@import '~bootstrap/scss/bootstrap';
+@import '../../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+@import '../../node_modules/overlayscrollbars/css/OverlayScrollbars.min.css';
+@import '../../node_modules/icheck-bootstrap/icheck-bootstrap.min.css';
+@import '../../node_modules/bootstrap/scss/bootstrap';
 @import '../../vendor/almasaeed2010/adminlte/dist/css/adminlte.min.css';
-@import '~animate.css/animate.min.css';
+@import '../../node_modules/animate.css/animate.min.css';
